# academicdb

./: .cspell-words.txt  .dockerignore  .env.example  .gitignore  CHANGES_2024_SIMPLIFIED_MODELS.md  CHANGES_SUMMARY.md  CLAUDE.md  CONSTITUTION.md  DOCKER_DEPLOYMENT.md  DOCKER_README.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  LICENSE  Makefile  PREPRINT_IMPLEMENTATION.md  README.md  SCOPUS_ID_SOLUTION.md  SPREADSHEET_PLAN.md  TESTING_STATUS.md  check_scopus_coverage.py  docker-compose.sqlite.yml  docker-compose.yml  manage.py  params.json  pyproject.toml  pytest.ini
.github/workflows/: poetry_python.yml
academic/: admin.py  api_urls.py  api_views.py  apps.py  collaborator_utils.py  csv_importers.py  cv_renderer.py  data_ingestion.py  models.py  serializers.py  signals.py  urls.py  utils.py  views.py
academic/migrations/: 0001_initial.py  0002_publication.py  0003_alter_publication_doi.py  0004_academicuser_scopus_id.py  0005_academicuser_pubmed_query.py  0006_authorcache.py  0007_funding.py  0008_teaching_talk_conference.py  0009_add_preprint_field.py  0010_add_publication_ignore_fields.py  0011_add_pi_subcontract_role.py  0012_add_skip_dois_field.py  0013_add_gin_indexes.py  0014_add_fulltext_search.py  0015_professionalactivity_remove_funding_funding_info_gin_and_more.py  0016_add_address_contact_fields.py  0017_publication_page_range_publication_volume.py  0018_populate_volume_page_range.py  0019_add_pmcache_model.py  0020_apirecordcache.py  0021_update_search_vector_include_authors.py  0022_link.py  0023_add_editorial_model.py  0024_collaborator.py  0025_simplify_conference_model.py  0026_simplify_talk_model.py
academic/scripts/: set_admin_password.py
academicdb/: academicdb.py  fix_conference_file.py  publication.py  publication_utils.py  render_cv.py  utils.py
academicdb_web/: asgi.py  settings.py  urls.py  wsgi.py
academicdb_web/settings/: __init__.py  base.py  docker.py  test.py
backups/: academicdb_backup_20250915_033323.dump
backups/backup_20250915_134218/: backup_info.json  funding.json  professional_activities.json  users.json
backups/backup_20250915_134240/: backup_info.json  complete_backup.json
backups/backup_20250915_140512/: backup_info.json  conferences.json  publications.json  talks.json  teaching.json
data/: README.md  additional_pubs.csv  conferences.csv  editorial.csv  links.csv  talks.csv  teaching.csv
development_notes/: DEPLOYMENT_NOTES.md  DOCKER_DATABASE_ANALYSIS.md  DOCKER_README.md  DOCKER_README_IMPROVEMENTS.md  IMPLEMENTATION_SUMMARY.md  MIGRATION_SUMMARY.md  PREPRINT_IMPLEMENTATION.md  PROGRESS_BAR_FIX.md  SKIPPED_TESTS.md  TESTING_IMPLEMENTATION_SUMMARY.md  TESTING_PLAN.md
docker/: create_superuser.py  create_tables.py  entrypoint.sh  fresh_db.py  migrate_docker.py  setup_migrations.py  verify_setup.py
examples/: README.md  additional_pubs.csv  bad_ids.csv  conference.csv  config.toml  editorial.csv  funding.csv  talks.csv
scripts/: dbbuilder.py  render_cv.py
specs/001-i-would-like/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/academicdb/: academicdb.py  coauthor_setup.py  crossref_utils.py  database.py  dbbuilder.py  fix_conference_file.py  get_collaborators.py  orcid.py  (+12 more)
tests/: __init__.py  conftest.py  conftest.py.bak  factories.py  test_publication.py
(+109 files in other folders)
