[tool.poetry]
name = "academicdb"
version = "0.1.3"
description = "Database for an academic CV"
authors = ["Russ Poldrack <poldrack@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.5.3"
numpy = "^1.23"
biopython = "^1.81"
scholarly = "^1.7.11"
crossrefapi = "^1.5.0"
toml = "^0.10.2"
tomli = { version = "^2.0.1", python = "<3.11" }
pybliometrics = "^3.4.0"
pymongo = "^4.3.3"
orcid = "^1.0.3"
tomli-w = "^1.0.0"
pytest = "^7.2.2"

[tool.poetry.scripts]
dbbuilder = "academicdb.dbbuilder:main"
get_collaborators = "academicdb.get_collaborators:main"
render_cv = "academicdb.render_cv:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
