[project]
name = "academicdb"
version = "0.2.1"
description = "Database for an academic CV"
authors = [
  {name = "Russ Poldrack", email = "poldrack@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.2.3",
    "numpy>=2.2.1",
    "biopython>=1.84",
    "scholarly>=1.7.11",
    "crossrefapi>=1.6.0",
    "tomli>=2.2.1",
    "pybliometrics>=4.1",
    "pymongo>=4.10.1",
    "orcid>=1.0.3",
    "tomli-w>=1.1.0",
    "pytest>=8.3.4",
    "toml>=0.10.2",
    "ipython>=8.31.0",
    "matplotlib>=3.10.0",
]

[project.scripts]
dbbuilder = "academicdb.dbbuilder:main"
get_collaborators = "academicdb.get_collaborators:main"
render_cv = "academicdb.render_cv:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
